--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
   </div>
 
   <script>
-    const repo = 'https://github.com/CareyWang/MyUrls'
-    const backend = 'http://example.com'
+    const repo = 'https://github.com/281677160/MyUrls'
+    const backend = 'https://example.com'
 
     let app = new Vue({
       el: "#app",
